--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ APP_SECRET=b342c584dbc33b1e403045e79c4790b1
 ###< symfony/framework-bundle ###
 
 url_api_users=http://127.0.0.1:8000/api/
+url_api_scryfall=https://api.scryfall.com/
 
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
