--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,4 +2,12 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    form_themes: ['bootstrap_4_layout.html.twig']
+
+    form_themes:
+        - 'bootstrap_4_layout.html.twig'
+        - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+
+    # Variables utilisables dans les vues twig
+    globals:
+        url_api_users: '%url_api_users%'
+        url_api_scryfall: '%url_api_scryfall%'
